--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,11 @@ Body {
   color: aquamarine;
 }
 
+
+/* FOOTER */
+
+.footer--copyright {
+  font-size: 21px;
+  color: grey;
+  text-align: right;
+}
